--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
+    "sweetalert2": "^11.4.35",
     "yup": "^0.32.11"
   },
   "devDependencies": {
