--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -1,33 +1,5 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-.yarn/
-.yarnrc.yml
-
-tests/**/__pycache__/
-tests/.pytest_cache/
-tests/.idea/
-tests/venv/
-tests/.venv/
+**/__pycache__/
+.pytest_cache/
+.idea/
+venv/
+.venv/
